--- a/client/pom.xml
+++ b/client/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.12.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>11.1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
