--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.4.12.Final</version>
     </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>11.1.2</version>
+    </dependency>
   </dependencies>
   <packaging>jar</packaging>
 </project>
