--- a/server/src/main/resources/hibernate.properties
+++ b/server/src/main/resources/hibernate.properties
@@ -5,4 +5,4 @@ hibernate.hbm2ddl.auto = create
 hibernate.connection.url = jdbc:mysql://localhost:3306/project
 hibernate.connection.timezone = UTC
 hibernate.connection.username = root
-hibernate.connection.password =  123456
+hibernate.connection.password =  shokomonayer55
